[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/overhang.png" type="Texture" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://src/GameScene.gd" type="Script" id=3]
[ext_resource path="res://src/gameboard/GameBoard.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/deck/Deck.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/menu/PauseMenu.tscn" type="PackedScene" id=6]

[node name="GameScene" type="Node2D"]
script = ExtResource( 3 )

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="TextureRect" parent="BackgroundLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameBoard" parent="." instance=ExtResource( 4 )]

[node name="ParallaxOverhangs" type="ParallaxBackground" parent="."]
layer = 100

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxOverhangs"]
motion_scale = Vector2( 1, 0.25 )
motion_mirroring = Vector2( 0, 600 )

[node name="OverhangLeft" type="TextureRect" parent="ParallaxOverhangs/ParallaxLayer"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -16.0
margin_right = 16.0
margin_bottom = 600.0
rect_min_size = Vector2( 32, 600 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverhangRight" type="TextureRect" parent="ParallaxOverhangs/ParallaxLayer"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 128.003
margin_right = 160.003
margin_bottom = 600.0
rect_min_size = Vector2( 32, 600 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserInterface" type="CanvasLayer" parent="."]
layer = 101

[node name="Deck" parent="UserInterface" instance=ExtResource( 5 )]
size_flags_horizontal = 3
size_flags_vertical = 3
deck = "res://assets/decks/default.json"

[node name="PauseMenu" parent="UserInterface" instance=ExtResource( 6 )]
